# fistbump

./: .editorconfig  .fistbumprc.json  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml  release.yml  test.yml
src/: main.rs
