[package]
name = "fistbump"
version = "1.0.0"
description = "A tiny command line utility for managing your project's version numbers"
authors = ["Chris Shiplet <chris@nearengine.com>"]
repository = "https://github.com/chrisshiplet/fistbump"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
structopt = "0.2.10"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
env_logger = "0.6.2"
